--- a/www/src/components/MobileMenu.css
+++ b/www/src/components/MobileMenu.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #ffffff;
+    background: #FAFAFA;
     width: 80%;
     height: 100vh;
     transform: translateX(-100%);
