--- a/www/src/components/Note.css
+++ b/www/src/components/Note.css
@@ -24,3 +24,22 @@
     color: #808080;
 
 }
+
+@media (max-width: 440px) {
+    .note{
+        padding: 20px;
+        margin: 20px auto;
+    }
+
+    .note__data{
+        font-size: 12px;
+    }
+    .note__title{
+        font-size: 16px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    .note__text{
+        font-size: 10px;
+    }
+}
